--- a/main.tex
+++ b/main.tex
@@ -95,7 +95,7 @@
 \listoffigures		%Abbildungsverzeichnis
 \lstlistoflistings	%Listingverzeichnis
 \begin{appendix}
-  \input{anhang.tex}
+%  \input{anhang.tex}
 \end{appendix}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Literaturverzeichnis
