--- a/kapitel2/ch2.tex
+++ b/kapitel2/ch2.tex
@@ -75,7 +75,8 @@ Schnittstellen & 17 GPIO-Pins, SPI, 21C, UART\\ \hline
 Stromversorgung & 5V Micro-USB Anschluss\\ \hline
 
 \end{longtable}
-\footnote{http://www.raspberrypiguide.de; http://www.raspberrypi.org; 15.01.2014}
+\cite{bib.RaspPi}\cite{bib.RaspPiGuide}
+%\footnote{http://www.raspberrypiguide.de; http://www.raspberrypi.org; 15.01.2014}
 
 
 \newpage
@@ -122,8 +123,9 @@ Für das Raspberry Pi worden mehrere Open Source Betriebssysteme programmiert. A
 
 Es gibt auch die Möglichkeit Windows auf das Raspberry Pi zu installieren, obwohl Nutzer davon abgeraten werden. Das Windows Betriebssystem benötigt zu viele Ressourcen und läuft sehr langsam und instabil auf das Raspberry Pi.\\
 
-Andere Distributionen sind Gebrauchorientiert aufgestellt, wie zum Beispiel für Media Center das beliebte XBMC (OpenELEC, Raspbmc, XBian). Weiterhin gibt es auch Androidsysteme, die auf das Raspberry Pi portiert worden sind.
-\footnote{http://www.raspbian.org; 15.01.2014}
+Andere Distributionen sind Gebrauchorientiert aufgestellt, wie zum Beispiel für Media Center das beliebte XBMC (OpenELEC, Raspbmc, XBian). Weiterhin gibt es auch Androidsysteme, die auf das Raspberry Pi portiert worden sind. \cite{bib.Raspian}
+
+%\footnote{http://www.raspbian.org; 15.01.2014}
 
 
 %%-------------------------------------------------------------------
@@ -280,7 +282,7 @@ Das Attribut „ID“ vom Typ „INT“ kann Werte von  -2147483648 bis 21474836
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{OpenCV und Gesichtserkennung}
 
-Ist eine freie Programmbibliothek(unter BSD-Lizens) mit Algorithmen für Bildverarbeitung und maschinelles sehen. Es beinhaltet C/C++, Python und Java Interfaces und unterstützt Windows, Linux, Mac OS, iOS and Android. OpenCV wird sowohl im kommerziellen wie im privaten Bereich stark benutzt.\footnote{http://opencv.org; 02.02.2014}\\
+Ist eine freie Programmbibliothek(unter BSD-Lizens) mit Algorithmen für Bildverarbeitung und maschinelles sehen. Es beinhaltet C/C++, Python und Java Interfaces und unterstützt Windows, Linux, Mac OS, iOS and Android. OpenCV wird sowohl im kommerziellen wie im privaten Bereich stark benutzt.\cite{bib.opencv} %\footnote{http://opencv.org; 02.02.2014}\\
 
 Unter die vielen Möglichkeiten das OpenCV anbietet, ist für dieses Projekt die Funktionen der Gesichtserkennung relevant. Um Bewegungen und Gesichter zu erkennen, muss die Aufnahme der Kamera in drei Schritte auswertet werden. 
 
@@ -336,4 +338,4 @@ MJPG-Streamer bittet die Möglichkeit Videodaten von einer Videoquelle als Motio
   \item subversion
 \end{itemize}
 
-Das aktuelle Quellcode muss von der Webseite \textit{http://sourceforge.net/projects/mjpg-streamer/} heruntergeladen werden und dementsprechend kompiliert werden.\footnote{http://sourceforge.net/apps/mediawiki/mjpg-streamer/index.php?title=Main\_Page; 02.02.2014} Über einem Webbrowser hat man Zugriff auf das Stream. Im diesem Projekt lautet die Adresse für das Stream \textit{spyhole.no-ip:1900}(der Default Port 8080 wurde auf 1900 geändert). Hier wird eine Oberfläche mit verschiedenen Streamoptionen dargestellt. Unter anderem Java und Javascript, sowie die Möglichkeit das Stream mittels das Programm VLC zu sehen. Durch Personalisieren dieser Webseite haben unsere Desktop und Mobile App zugriff auf das Stream.
+Das aktuelle Quellcode muss von der Webseite \textit{http://sourceforge.net/projects/mjpg-streamer/} heruntergeladen werden und dementsprechend kompiliert werden.\cite{bib.mjpgStreamer} Über einem Webbrowser hat man Zugriff auf das Stream. Im diesem Projekt lautet die Adresse für das Stream \textit{spyhole.no-ip:1900}(der Default Port 8080 wurde auf 1900 geändert). Hier wird eine Oberfläche mit verschiedenen Streamoptionen dargestellt. Unter anderem Java und Javascript, sowie die Möglichkeit das Stream mittels das Programm VLC zu sehen. Durch Personalisieren dieser Webseite haben unsere Desktop und Mobile App zugriff auf das Stream.
