--- a/bhtThesis.bib
+++ b/bhtThesis.bib
@@ -1,32 +1,5 @@
 %%
-@book{albach.GdE1,
-	author={Manfred Albach},
-	title={{Grundlagen der Elektrotechnik 1}},
-	publisher={Pearson Studium},
-	year={2005}
-}
 
-@manual{bib.m3pi,
-	address={\url{http://www.pololu.com/docs/pdf/0J48/m3pi.pdf}},
-	title={Pololu m3pi User’s Guide},
-	year={2001},
-	organization={Pololu}
-}
-
-@manual{bib.3pi,
-	address={\url{http://www.pololu.com/docs/pdf/0J21/3pi.pdf}},
-	title={Pololu 3pi Robot User’s Guide},
-	year={2001},
-	organization={Pololu}
-}
-
-@manual{bib.m3piClassReference,
-	address={\url{http://mbed.org/users/chris/code/m3pi/docs/4b7d6ea9b35b//classm3pi.html}},
-	title={m3pi Class Reference},
-	author={Chris Styles},
-	year={2011},
-	organization={mbed}
-}
 %% die oberen sind als Beispiele drin gelassen worden. Kommen aber zur Abgabe raus.
 
 @manual{bib.jFXRaspPi,
@@ -34,4 +7,36 @@
 	title={JavaFX für das Raspberry Pi},
 	year={2012},
 	organization={Oracle}
+}
+
+@manual{bib.RaspPiGuide,
+	address={\url{http://www.raspberrypiguide.de}},
+	title={Raspberry Pi Guide},
+	year={15.01.2014},
+	organization={Raspberry Pi Foundation}
+}
+
+@manual{bib.RaspPi,
+	address={\url{http://www.raspberrypi.org}},
+	title={Raspberry Pi},
+	year={15.01.2014},
+	organization={Raspberry Pi Foundation}
+}
+
+@manual{bib.Raspian,
+	address={\url{http://www.raspbian.org}},
+	title={Raspian},
+	year={15.01.2014},
+}
+
+@manual{bib.opencv,
+	address={\url{http://opencv.org}},
+	title={OpenCV},
+	year={02.02.2014},
+}
+
+@manual{bib.mjpgStreamer,
+	address={\url{http://sourceforge.net/apps/mediawiki/mjpg-streamer/index.php?title=Main\_Page}},
+	title={mjpg-streamer},
+	year={02.02.2014},
 }
